test/e2e/features/transformation/testdata/no-transform.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-no-transform
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-no-transform.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
# Route for WebSocket happy path test: no TrafficPolicy, so no body buffering.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-websocket-no-transform
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-websocket-no-transform.com"
  rules:
    - backendRefs:
        - name: websocket-svc
          port: 8080
