test/e2e/features/transformation/testdata/transform-for-body-json-rust.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-body-json
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-route-for-body-json.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-body-json
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-body-json
  transformation:
    request:
      set:
        - name: "x-transformed-incoming"
          value: "level_{%- if mykey != \"\" -%}{{mykey.myinnerkey}}{% else %}unknown{% endif %}"
      body:
        parseAs: "AsJson"
    response:
      set:
        - name: "x-how-great"
          value: "level_{%- if headers != \"\" -%}{{headers[\"X-Incoming-Stuff\"][0]}}{% else %}unknown{% endif %}"
        - name: "from-incoming"
          value: "key_{%- if headers != \"\" -%}{{headers[\"X-Transformed-Incoming\"][0]}}{% else %}unknown{% endif %}"
      body:
        parseAs: "AsJson"
        value: "{{headers}}" # use the parsed body of the returned format (pull from input headers as returned by echo service)
