test/e2e/features/transformation/testdata/transform-for-body-local-reply.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-body-local-reply
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-route-for-body-local-reply.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: transformation-buffer-limit
spec:
  buffer:
    maxRequestSize: "1024"
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-body-local-reply
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-body-local-reply
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-body-local-reply
  transformation:
    response:
      body:
        parseAs: AsString
        value: '{{ body() }}'
