test/e2e/features/transformation/testdata/transform-for-custom-functions.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-custom-functions
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-custom-functions.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-custom-functions
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-custom-functions
  transformation:
    request:
      set:
        - name: x-base64-encode
          value: "{{base64_encode(\"base64 encode in request header\")}}"
        - name: x-base64-decode
          value: "{{base64_decode(\"YmFzZTY0IGRlY29kZSBpbiByZXF1ZXN0IGhlYWRlcg==\")}}"
        - name: x-base64-decode-invalid
          value: "{{base64_decode(\"foobar\")}}"
        - name: x-base64-decode-invalid-non-empty
          value: " foobar {{base64_decode(\"foobar\")}}"
        - name: x-substring
          value: "{{substring(\"in request\", 3)}}"
        - name: x-substring2
          value: "{{substring(\"in request\", 3, 3)}}"
        - name: x-substring-invalid
          value: "{{substring(\"in request\", 30)}}"
        - name: x-substring-invalid2
          value: "{{substring(\"in request\", 3, 60)}}"
        - name: x-env
          value: "{{env(\"POD_NAMESPACE\")}}"
        - name: x-env-not-set
          value: "{{env(\"FOOBAR\")}}"
        - name: x-request-body
          value: "{{body()}}"
      body:
          parseAs: "AsJson"
          value: "{\"Foo\":\"{{ raw_string(foo) }}\"}"
    response:
      set:
        - name: x-base64-encode
          value: "{{base64_encode(\"base64 encode in response header\")}}"
        - name: x-base64-decode
          value: "{{base64_decode(\"YmFzZTY0IGRlY29kZSBpbiByZXNwb25zZSBoZWFkZXI=\")}}"
        - name: x-base64-decode-invalid
          value: "{{base64_decode(\"foobar\")}}"
        - name: x-base64-decode-invalid-non-empty
          value: "foobar{{base64_decode(\"foobar\")}}"
        - name: x-substring
          value: "{{substring(\"in response\", 3)}}"
        - name: x-substring2
          value: "{{substring(\"in response\", 3, 4)}}"
        - name: x-substring-invalid
          value: "{{substring(\"in response\", 30)}}"
        - name: x-substring-invalid2
          value: "{{substring(\"in response\", 3, 70)}}"
        - name: x-env
          value: "{{env(\"POD_NAMESPACE\")}}"
        - name: x-env-not-set
          value: "{{env(\"FOOBAR\")}}"
