test/e2e/features/transformation/testdata/transform-for-get-cookie.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-get-cookie
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-get-cookie.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-get-cookie
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-get-cookie
  transformation:
    request:
      set:
        - name: x-session
          value: '{{get_cookie("session")}}'
        - name: x-user
          value: '{{get_cookie("user")}}'
        - name: x-wrong-case
          value: '{{get_cookie("SESSION")}}'
        - name: x-missing-cookie
          value: '{{get_cookie("missing")}}'
        - name: x-foo
          value: '{{get_cookie("foo")}}'
        - name: x-test
          value: '{{get_cookie("test")}}'
