test/e2e/features/transformation/testdata/transform-for-header-to-body-json.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-header-to-body-json
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-route-for-header-to-body-json.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-header-to-body-json
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-header-to-body-json
  transformation:
    request:
      body:
        parseAs: "AsJson"
        # the request body is a json array, here we convert that into a string by pulling 
        # out all the elements and added a request header value
        value: '{% for i in context() %}{{ i }}{% endfor %}-{{request_header(":path")}}'
    response:
      body:
        parseAs: "AsString"
        # Because the test reply on the json body from http bin to re-construct the request, we cannot 
        # just replace the body. Here, we are just testing body() is the string representation of the body
        # and it does not affect the test when we validate the request body we changed above
        value: '{{body()}}'
