test/e2e/features/transformation/testdata/transform-for-headers.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-headers
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-headers.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-headers
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-headers
  transformation:
    request:
      set:
# in request header context, both header() and request_header() refer to the same set of headers
        - name: x-foo-bar
          value: "foolen_{{header(\"content-length\")}}"
        - name: x-foo-bar2
          value: "foolen_{{request_header(\"content-length\")}}"
        - name: ":method"
          value: "pseudo-not-rejected!"
      remove:
        - "x-remove-me"
    response:
      set:
# in response header context, header() refers to response headers and request_header() refer to request headers
        - name: x-foo-response
          value: "{%- if request_header(\"x-add-bar\") != \"\" -%}supersuper{{request_header(\"x-add-bar\")}}{% else %}notsuper{% endif %}"
        - name: x-foo-response-status
          value: "{{header(\":status\")}}"
      remove:
        - "x-remove-me"
