test/e2e/features/transformation/testdata/transform-for-match-header.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-header-match
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-match.com"
  rules:
    - matches:
        - headers:
          - type: Exact
            name: foo
            value: bar
      backendRefs:
        - name: simple-svc
          port: 8080
      
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-header-match
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-header-match
  transformation:
    request:
      set:
        - name: x-foo-request
          value: "header matched"
        - name: x-header-request
          value: "matched"
    response:
      set:
        - name: x-foo-response
          value: "header matched"
        - name: x-header-response
          value: "matched"
