test/e2e/features/transformation/testdata/transform-for-match-method.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-method-match
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-match.com"
  rules:
    - matches:
        - method: GET
      backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-method-match
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example-route-for-method-match
  transformation:
    request:
      set:
        - name: x-foo-request
          value: "method matched"
        - name: x-method-request
          value: "matched"
    response:
      set:
        - name: x-foo-response
          value: "method matched"
        - name: x-method-response
          value: "matched"
