test/e2e/features/transformation/testdata/transform-for-model-extraction-parseas-none.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-model-extraction-parseas-none
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-route-for-model-extraction-parseas-none.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-model-extraction-parseas-none
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: example-route-for-model-extraction-parseas-none
  transformation:
    request:
      body:
        parseAs: "None"
      set:
        - name: "Body-Extracted-Model"
          value: "{{ model }}"
