test/e2e/features/transformation/testdata/transform-skip-buffering-with-body-func.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-skip-buffering-body-func
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-route-for-skip-buffering-body-func.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-skip-buffering-body-func
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: example-route-for-skip-buffering-body-func
  transformation:
    request:
      set:
        - name: x-request-deleted
          value: "{{ body() }}"
        - name: x-request-good
          value: "ab{{ context() }}c"
      body:
        parseAs: "None"
    response:
      set:
        - name: x-response-deleted
          value: "{{ body() }}"
        - name: x-response-good
          value: "d{{ context() }}ef"
      body:
        parseAs: "None"
