test/e2e/features/transformation/testdata/transform-skip-buffering.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route-for-skip-buffering
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example-route-for-skip-buffering.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-traffic-policy-for-skip-buffering
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: example-route-for-skip-buffering
  transformation:
    request:
      body:
        parseAs: "None"
        # when parseAs None, the value field is ignored
        value: '{% for i in context() %}{{ i }}{% endfor %}-{{request_header(":path")}}'
    response:
      body:
        parseAs: "None"
        # when parseAs None, the value field is ignored
        value: '{{ replace_with_random(body(), "andy") }}'
